@@ -10,6 +10,7 @@ Version 1.4.7 - CVS
 	in same domain.
   - Issue loading options page always loaded the prefs 
     initial_value on display, instead of the users' value.
+  - Enabled Ukrainian translation after updates by Serhij Dubyk.
 
 Version 1.4.6 - 23 February 2006
 --------------------------------
